--- a/covid19IndiaTracker/package.json
+++ b/covid19IndiaTracker/package.json
@@ -24,6 +24,7 @@
     "primeicons": "^2.0.0",
     "primeng": "^9.0.5",
     "rxjs": "~6.4.0",
+    "tsconfig": "^7.0.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
